--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="profile">
         <div class="top">
-            <img src="../sen.clint.png" alt="" style="width: 5em; height:5em;">
+            <img src="/images/sen.clint.png" alt="" style="width: 5em; height:5em;">
             <h2>Atayero Clinton</h2>
             <h4>Ibadan, Oyo State, Nigeria.</h4>
             <p>"Front-end developer with ability to work with a team."</p>
